packages/yew-functional-macro/tests/function_attr/generic-lifetime-fail.stderr
error: function components can't have generic lifetime parameters
  --> $DIR/generic-lifetime-fail.rs:10:8
   |
10 | fn comp<'a>(props: &'a Props) -> Html {
   |        ^^^^
